--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
             <div id="menu" class="hidden space-x-4 md:flex">
                 <a href="#" class="hover:underline">Home</a>
                 <a href="#programs" class="hover:underline">Program 2</a>
-                <a href="#about" class="hover:underline">About</a>
+                <a href="#about" class="hover:underline">About us</a>
                 <a href="#destinations" class="hover:underline">Destinations</a>
                 <a href="#testimonials" class="hover:underline">Testimonials</a>
                 <a href="#contact" class="hover:underline">Contact</a>
