--- a/src/index.html
+++ b/src/index.html
@@ -4,160 +4,155 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Study Abroad</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <title>Fresherbot Hiring Assessments</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        body {
+            background: linear-gradient(120deg, #6a00f4, #007aff, #00d4ff);
+            background-size: 200% 200%;
+            animation: gradientShift 10s ease infinite;
+            height: 100vh;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            overflow: hidden;
+        }
+
+        @keyframes gradientShift {
+            0% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+            100% {
+                background-position: 0% 50%;
+            }
+        }
+
+        canvas {
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 0;
+            width: 100vw;
+            height: 100vh;
+        }
+
+        .content {
+            position: relative;
+            z-index: 10;
+            text-align: center;
+        }
+
+        .fade-in {
+            animation: fadeIn 1.5s ease-out;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+    </style>
 </head>
 
-<body class="font-sans bg-gray-100">
+<body>
 
-    <!-- Navigation -->
-    <nav class="p-4 text-white bg-gradient-to-r from-pink-500 via-red-500 to-yellow-500">
-        <div class="container flex items-center justify-between mx-auto">
-            <a href="#" class="text-3xl font-bold md:text-4xl lg:text-5xl">Study Abroad</a>
-            <!-- Responsive Menu Button -->
-            <div class="md:hidden">
-                <button id="menu-toggle" class="text-white focus:outline-none">
-                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M4 6h16M4 12h16m-7 6h7"></path>
-                    </svg>
-                </button>
-            </div>
-            <!-- Responsive Menu -->
-            <div id="menu" class="hidden space-x-4 md:flex">
-                <a href="#" class="hover:underline">Home</a>
-                <a href="#programs" class="hover:underline">Program 2</a>
-                <a href="#about" class="hover:underline">About us</a>
-                <a href="#destinations" class="hover:underline">Destinations</a>
-                <a href="#testimonials" class="hover:underline">Testimonials</a>
-                <a href="#contact" class="hover:underline">Contact</a>
-            </div>
+    <canvas></canvas>
+
+    <!-- Main Content -->
+    <div class="content">
+        <h1 class="text-6xl font-bold text-white tracking-wide fade-in">Fresherbot Hiring Assessments</h1>
+        <p class="mt-4 text-lg text-gray-100 fade-in">
+            AI-driven assessments for skills, communication, and personality.
+        </p>
+        <div class="mt-12 fade-in">
+            <a href="/login" class="inline-flex items-center justify-center px-8 py-3 text-lg font-bold text-blue-600 bg-white border border-blue-600 rounded-full shadow-lg transition-transform transform hover:scale-105 hover:shadow-xl focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-opacity-50">
+                Get Started
+            </a>
         </div>
-    </nav>
+    </div>
 
-    <!-- Hero Section -->
-    <header
-        class="py-12 text-center text-white bg-gradient-to-r from-pink-500 via-red-500 to-yellow-500 md:py-20 lg:py-24">
-        <div class="container mx-auto">
-            <h1 class="mb-4 text-3xl font-bold md:text-5xl lg:text-6xl">Explore the World Through Study Abroad Programs
-            </h1>
-            <p class="text-lg md:text-xl lg:text-2xl">Broaden your horizons and immerse yourself in new cultures</p>
-            <a href="/login"
-                class="inline-block px-6 py-3 mt-6 font-bold text-white bg-green-500 rounded-full hover:bg-green-600">
-                $login</a>
-            <a href="/register"
-                class="inline-block px-6 py-3 mt-6 font-bold text-white bg-blue-500 rounded-full hover:bg-blue-600">
-                $register</a>
+    <script>
+        const canvas = document.querySelector('canvas');
+        const ctx = canvas.getContext('2d');
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+        const particlesArray = [];
+        const numberOfParticles = 80;
 
-        </div>
-    </header>
+        class Particle {
+            constructor() {
+                this.x = Math.random() * canvas.width;
+                this.y = Math.random() * canvas.height;
+                this.size = Math.random() * 5 + 1;
+                this.speedX = Math.random() * 0.5 - 0.25; // Slowed down
+                this.speedY = Math.random() * 0.5 - 0.25; // Slowed down
+            }
+            update() {
+                this.x += this.speedX;
+                this.y += this.speedY;
+                if (this.x > canvas.width || this.x < 0) this.speedX *= -1;
+                if (this.y > canvas.height || this.y < 0) this.speedY *= -1;
+            }
+            draw() {
+                ctx.fillStyle = 'rgba(255, 255, 255, 0.6)'; // Lighter and more transparent
+                ctx.beginPath();
+                ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
+                ctx.closePath();
+                ctx.fill();
+            }
+        }
 
-    <!-- Programs Section -->
-    <section id="programs" class="py-12 bg-gray-100 md:py-16 lg:py-20">
-        <div class="container mx-auto text-center">
-            <h2 class="mb-8 text-3xl font-bold md:text-4xl lg:text-5xl">Our Programs</h2>
-            <div class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3">
-                <!-- Program Card Example -->
-                <div class="p-6 bg-white rounded-lg shadow-md">
-                    <h3 class="mb-2 text-xl font-bold md:text-2xl lg:text-3xl">GRE</h3>
-                    <p class="text-gray-600">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in quam eu
-                        turpis tincidunt feugiat.</p>
-                </div>
-                <div class="p-6 bg-white rounded-lg shadow-md">
-                    <h3 class="mb-2 text-xl font-bold md:text-2xl lg:text-3xl">IELTS</h3>
-                    <p class="text-gray-600">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in quam eu
-                        turpis tincidunt feugiat.</p>
-                </div>
-                <div class="p-6 bg-white rounded-lg shadow-md">
-                    <h3 class="mb-2 text-xl font-bold md:text-2xl lg:text-3xl">PTE</h3>
-                    <p class="text-gray-600">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in quam eu
-                        turpis tincidunt feugiat.</p>
-                </div>
-                <!-- Repeat the above card structure for each program -->
-            </div>
-        </div>
-    </section>
+        function connectParticles() {
+            let opacityValue = 1;
+            for (let a = 0; a < particlesArray.length; a++) {
+                for (let b = a; b < particlesArray.length; b++) {
+                    let dx = particlesArray[a].x - particlesArray[b].x;
+                    let dy = particlesArray[a].y - particlesArray[b].y;
+                    let distance = Math.sqrt(dx * dx + dy * dy);
+                    if (distance < 120) {
+                        opacityValue = 1 - (distance / 120);
+                        ctx.strokeStyle = 'rgba(255, 255, 255,' + (opacityValue * 0.6) + ')'; // More transparent lines
+                        ctx.lineWidth = 1;
+                        ctx.beginPath();
+                        ctx.moveTo(particlesArray[a].x, particlesArray[a].y);
+                        ctx.lineTo(particlesArray[b].x, particlesArray[b].y);
+                        ctx.stroke();
+                    }
+                }
+            }
+        }
 
-    <!-- About Section -->
-    <section id="about"
-        class="py-12 text-white bg-gradient-to-r from-pink-500 via-red-500 to-yellow-500 md:py-16 lg:py-20">
-        <div class="container mx-auto text-center">
-            <h2 class="mb-8 text-3xl font-bold md:text-4xl lg:text-5xl">About Us</h2>
-            <p class="text-lg md:text-xl lg:text-2xl">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in
-                quam eu turpis tincidunt feugiat.</p>
-        </div>
-    </section>
+        function animate() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            for (let i = 0; i < particlesArray.length; i++) {
+                particlesArray[i].update();
+                particlesArray[i].draw();
+            }
+            connectParticles();
+            requestAnimationFrame(animate);
+        }
 
-    <!-- Study Destinations Section -->
-    <section id="destinations" class="py-12 bg-gray-100 md:py-16 lg:py-20">
-        <div class="container mx-auto text-center">
-            <h2 class="mb-8 text-3xl font-bold md:text-4xl lg:text-5xl">Explore Exciting Study Destinations</h2>
-            <p class="text-lg md:text-xl lg:text-2xl">Discover amazing places to enhance your learning experience.</p>
-            <div class="grid grid-cols-1 gap-8 mt-8 md:grid-cols-2 lg:grid-cols-3">
-                <!-- Destination Card Example -->
-                <div class="p-6 bg-white rounded-lg shadow-md">
-                    <h3 class="mb-2 text-xl font-bold md:text-2xl lg:text-3xl">USA</h3>
-                    <p class="text-gray-600">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in quam eu
-                        turpis tincidunt feugiat.</p>
-                </div>
-                <div class="p-6 bg-white rounded-lg shadow-md">
-                    <h3 class="mb-2 text-xl font-bold md:text-2xl lg:text-3xl">UK</h3>
-                    <p class="text-gray-600">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in quam eu
-                        turpis tincidunt feugiat.</p>
-                </div>
-                <div class="p-6 bg-white rounded-lg shadow-md">
-                    <h3 class="mb-2 text-xl font-bold md:text-2xl lg:text-3xl">Australia</h3>
-                    <p class="text-gray-600">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in quam eu
-                        turpis tincidunt feugiat.</p>
-                </div>
-                <!-- Repeat the above card structure for each destination -->
-            </div>
-        </div>
-    </section>
+        window.addEventListener('resize', () => {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+        });
 
-    <!-- Testimonials Section -->
-    <section id="testimonials"
-        class="py-12 text-white bg-gradient-to-r from-pink-500 via-red-500 to-yellow-500 md:py-16 lg:py-20">
-        <div class="container mx-auto text-center">
-            <h2 class="mb-8 text-3xl font-bold md:text-4xl lg:text-5xl">What Students Say</h2>
-            <div class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3">
-                <!-- Testimonial Card Example -->
-                <div class="p-6 bg-white rounded-lg shadow-md">
-                    <p class="text-gray-600">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in quam eu
-                        turpis tincidunt feugiat."</p>
-                    <p class="mt-4 font-bold">- John Doe, Study Abroad Alumnus</p>
-                </div>
-                <div class="p-6 bg-white rounded-lg shadow-md">
-                    <p class="text-gray-600">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in quam eu
-                        turpis tincidunt feugiat."</p>
-                    <p class="mt-4 font-bold">- John Doe, Study Abroad Alumnus</p>
-                </div>
-                <div class="p-6 bg-white rounded-lg shadow-md">
-                    <p class="text-gray-600">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in quam eu
-                        turpis tincidunt feugiat."</p>
-                    <p class="mt-4 font-bold">- John Doe, Study Abroad Alumnus</p>
-                </div>
-                <!-- Repeat the above card structure for each testimonial -->
-            </div>
-        </div>
-    </section>
+        for (let i = 0; i < numberOfParticles; i++) {
+            particlesArray.push(new Particle());
+        }
 
-    <!-- Contact Section -->
-    <section id="contact" class="py-12 bg-gray-100 md:py-16 lg:py-20">
-        <div class="container mx-auto text-center">
+        animate();
+    </script>
 
-            <h2 class="mb-8 text-3xl font-bold md:text-4xl lg:text-5xl">Contact Us</h2>
-            <p class="mb-8 text-lg md:text-xl lg:text-2xl">Have questions or want more information? Reach out to us!</p>
-            <a href="#"
-                class="inline-block px-6 py-3 font-bold text-white bg-blue-500 rounded-full hover:bg-blue-600">Contact
-                Now</a>
-        </div>
-    </section>
+</body>
 
-    <!-- Footer -->
-    <footer class="py-4 text-center text-white text-gray-600 bg-gradient-to-r from-teal-500 via-teal-400 to-green-500">
-        <p>&copy; 2024 Study Abroad. All rights reserved.</p>
-    </footer>
-
-</body
+</html>
