--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
-            background: linear-gradient(120deg, #173e67, #177751, #1aa240);
+            background: linear-gradient(120deg, #6a00f4, #007aff, #00d4ff);
             background-size: 200% 200%;
             animation: gradientShift 10s ease infinite;
             height: 100vh;
@@ -70,12 +70,12 @@
     <!-- Main Content -->
     <div class="content">
         <h1 class="text-6xl font-bold text-white tracking-wide fade-in">Fresherbot Hiring Assessments</h1>
-        <p class="mt-4 text-lg text-gray-100 fade-in ">
+        <p class="mt-4 text-lg text-gray-100 fade-in">
             AI-driven assessments for skills, communication, and personality.
         </p>
-
+        
         <div class="mt-12 fade-in">
-            <a href="/login" class="inline-flex items-center justify-center px-8 py-3 text-lg font-bold text-green-600 bg-white border border-green-600 rounded-full shadow-lg transition-transform transform hover:scale-105 hover:shadow-xl focus:outline-none focus:ring-2 focus:ring-green-600 focus:ring-opacity-50">
+            <a href="/login" class="inline-flex items-center justify-center px-8 py-3 text-lg font-bold text-blue-600 bg-white border border-blue-600 rounded-full shadow-lg transition-transform transform hover:scale-105 hover:shadow-xl focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-opacity-50">
                 Get Started
             </a>
         </div>
